Web UI: Loading spinner, update swagger and server to receive beam width and context, and add image for team profile
